// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <DescriptionWithClassificationInput /> rendering should render classification text area field correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      className=""
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "placeholder": "type here",
        }
      }
      touched={false}
    >
      <div
        className="invoer"
      >
        <ForwardRef
          onBlur={[Function]}
          placeholder="type here"
          rows={6}
        />
      </div>
    </Header>
  </div>
</div>
`;

exports[`Form component <DescriptionWithClassificationInput /> rendering should render no classification text area field when not visible 1`] = `
<div
  className=""
/>
`;

exports[`Form component <DescriptionWithClassificationInput /> rendering should render with a character counter when maxLength is supplied correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      className=""
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "maxLength": 3000,
          "name": "input-field-name",
          "placeholder": "type here",
        }
      }
      touched={false}
    >
      <div
        className="invoer"
      >
        <ForwardRef
          onBlur={[Function]}
          placeholder="type here"
          rows={6}
        />
        <div
          className="input-help"
        >
          <span
            className="text-area-input__counter"
          >
            0/3000 tekens
          </span>
        </div>
      </div>
    </Header>
  </div>
</div>
`;

exports[`Form component <DescriptionWithClassificationInput /> rendering should render with a character counter with value correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input"
  >
    <Header
      className=""
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "maxLength": 3000,
          "name": "input-field-name",
          "placeholder": "type here",
        }
      }
      touched={false}
    >
      <div
        className="invoer"
      >
        <ForwardRef
          onBlur={[Function]}
          placeholder="type here"
          rows={6}
        />
        <div
          className="input-help"
        >
          <span
            className="text-area-input__counter"
          >
            4/3000 tekens
          </span>
        </div>
      </div>
    </Header>
  </div>
</div>
`;
